bad/assign_binop_anne_int.example_compiler_output
ERROR
[1mbad/assign_binop_anne_int.lat:5:12: [1;31merror: [0;1mleft side is not assignable[m
	x != null = 42;
	          [1;32m^[m
[1mbad/assign_binop_anne_int.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	x != null = 42;
	[1;32m^[m
